# pyccs

./: .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  Cargo.toml  Makefile  README.md  build.rs  pyproject.toml
.github/workflows/: build-bin.sh  build-wheels.sh  publish.yml  rust.yml  test.yml
.rustup/: settings.toml
.rustup/toolchains/nightly-2019-12-11-x86_64-unknown-linux-gnu/share/doc/rust/html/: complement-design-faq.html  complement-lang-faq.html  complement-project-faq.html  error-index.html  grammar.html  guide-crates.html  guide-error-handling.html  guide-ffi.html  guide-macros.html  guide-ownership.html  guide-plugins.html  guide-pointers.html  guide-strings.html  guide-tasks.html  guide-testing.html  guide-unsafe.html  guide.html  intro.html  not_found.html  reference.html  rust.html  rustc-ux-guidelines.html  rustdoc.html  search-index1.41.0.js  settings.html  source-files1.41.0.js  storage1.41.0.js  tutorial.html  version_info.html
.rustup/toolchains/nightly-2019-12-11-x86_64-unknown-linux-gnu/share/doc/rust/html/alloc/: all.html  index.html  macro.format.html  macro.vec.html
.rustup/toolchains/nightly-2019-12-11-x86_64-unknown-linux-gnu/share/doc/rust/html/book/: SUMMARY.html  appendix-00.html  appendix-01-keywords.html  appendix-02-operators.html  appendix-03-derivable-traits.html  appendix-04-useful-development-tools.html  appendix-05-editions.html  appendix-06-translation.html  appendix-07-nightly-rust.html  associated-types.html  attributes.html  bibliography.html  borrow-and-asref.html  casting-between-types.html  ch00-00-introduction.html  ch01-00-getting-started.html  ch01-01-installation.html  ch01-02-hello-world.html  ch01-03-hello-cargo.html  ch02-00-guessing-game-tutorial.html  ch03-00-common-programming-concepts.html  ch03-01-variables-and-mutability.html  ch03-02-data-types.html  ch03-03-how-functions-work.html  ch03-04-comments.html  ch03-05-control-flow.html  ch04-00-understanding-ownership.html  ch04-01-what-is-ownership.html  ch04-02-references-and-borrowing.html  ch04-03-slices.html  ch05-00-structs.html  ch05-01-defining-structs.html  ch05-02-example-structs.html  ch05-03-method-syntax.html  ch06-00-enums.html  ch06-01-defining-an-enum.html  ch06-02-match.html  ch06-03-if-let.html  ch07-00-managing-growing-projects-with-packages-crates-and-modules.html  ch07-01-packages-and-crates.html  (+126 more)
.rustup/toolchains/nightly-2019-12-11-x86_64-unknown-linux-gnu/share/doc/rust/html/cargo/: faq.html  index.html  print.html  searchindex.js  (+1 more)
.rustup/toolchains/stable-x86_64-unknown-linux-gnu/libexec/: cargo-credential-1password
.rustup/toolchains/stable-x86_64-unknown-linux-gnu/share/doc/rust/html/: complement-design-faq.html  complement-lang-faq.html  complement-project-faq.html  error-index.html  grammar.html  guide-crates.html  guide-error-handling.html  guide-ffi.html  guide-macros.html  guide-ownership.html  guide-plugins.html  guide-pointers.html  guide-strings.html  guide-tasks.html  guide-testing.html  guide-unsafe.html  guide.html  index.html  intro.html  not_found.html  reference.html  rust.html  rustdoc.html  rustdoc1.61.0.css  settings.html  source-files1.61.0.js  tutorial.html  version_info.html
.rustup/update-hashes/: nightly-2019-12-11-x86_64-unknown-linux-gnu  stable-x86_64-unknown-linux-gnu
misc/: Dockerfile  INSTALL.md  build-wheels.sh  depoly.sh  perf.sh
pyccs/: __init__.py  _ccs.py
src/: fasta.rs  fastpdf_data.rs  fastq.rs  kmer.rs  lib.rs  logger.rs  math.rs  poa.cpp  python_module.rs  scan.rs  sim.rs  spoa.rs  utils.rs
tests/: test.sh  test_ccs.py
(+29375 files in other folders)
