[package]
name = "circtools"
version = "0.1.1"
authors = ["Kevinzjy <kevinzjy1997@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
docopt = "1.1.0"
needletail = "0.4"
serde = "1.0"
anyhow = "1.0"
chrono = "0.4.19"
bio = "0.33.0"
libc = "0.2"
rayon = "1.5"

[build-dependencies]
cc = "1.0"
cmake = "0.1"
