[package]
name = "circtools"
version = "1.0.0"
authors = ["Kevinzjy <kevinzjy1997@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
docopt = "1.1.0"
serde = "1.0"
anyhow = "1.0"
chrono = "0.4.19"
bio = "0.33.0"
libc = "0.2"
seq_io = "0.3.1"
flate2 = "1.0.20"
indicatif = "0.15.0"

[build-dependencies]
cc = "1.0"
cmake = "0.1"
