[package]
name = "pyccs"
version = "1.1.0"
authors = ["Jinyang Zhang <zhangjinyang@biols.ac.cn"]
edition = "2021"

[package.metadata.maturin]
maintainer = "Jinyang Zhang"
maintainer-email = "zhangjinyang@biols.ac.cn"
requires-python=">=3.7"
project-url = { homepage = "https://github.com/Kevinzjy/pyccs" }

# [workspace]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "pyccs"
path = "src/lib.rs"
crate-type = ["lib", "cdylib"]

[[bin]]
name = "ccs"
path = "src/bin/ccs.rs"

[dependencies]
docopt = "1.1.0"
serde = "1.0"
anyhow = "1.0"
chrono = "0.4.19"
bio = "0.33.0"
libc = "0.2"
seq_io = "0.3.1"
flate2 = "1.0.20"
indicatif = "0.15.0"
pyo3 = { version = "0.16.5", features = ["extension-module", "anyhow"] }
rust-spoa = { git = "https://github.com/Kevinzjy/rust-spoa" }
