[build-system]
requires = ["maturin>=0.12,<0.13"]
build-backend = "maturin"

[project]
name = "pyccs"
version = "1.1.0"
description = "Detect cyclic consensus sequence from long nanopore reads"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
keywords = ["circular RNA", "nanopore"]
authors = [
    {email = "zhangjinyang@biols.ac.cn"},
    {name = "Jinyang Zhang"},
]
maintainers = [
    {name = "Jinyang Zhang", email = "zhangjinyang@biols.ac.cn"}
]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[project.urls]
hompage = "https://github.com/Kevinzjy/circtools"
repository = "github.com"
changelog = "github.com/Kevinzjy/circtools/CHANGELOG.md"