[build-system]
requires = ["maturin>=0.12,<0.13"]
build-backend = "maturin"
bindings = "pyo3"
cargo-extra-args = "--features python"

[project]
name = "pyccs"
version = "1.1.0"
description = "Detect cyclic consensus sequence from long nanopore reads"
readme = "README.md"
requires-python = ">=3.5"
license = {file = "LICENSE"}
keywords = ["circular RNA", "nanopore"]
authors = [
    {email = "zhangjinyang@biols.ac.cn"},
    {name = "Jinyang Zhang"},
]
maintainers = [
    {name = "Jinyang Zhang", email = "zhangjinyang@biols.ac.cn"}
]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[project.urls]
hompage = "https://github.com/Kevinzjy/pyccs"
documentation = "https://github.com/Kevinzjy/pyccs"
repository = "github.com"
changelog = "github.com/Kevinzjy/pyccs/CHANGELOG.md"